# skyrim_mods

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
skyblivion_classcreation/: CMakeLists.txt
skyblivion_classcreation/src/: ClassCreationMenu.cpp  ClassCreationMenu.h
skyblivion_classcreation/ui/: ClassCreationButton.as  ClassCreationMenu.as  ClassCreationTextInput.as  ClassMenuPresets.as  Translate_ENGLISH.txt
skyblivion_spellcrafting/: CMakeLists.txt
skyblivion_spellcrafting/include/: Spellmaking.h
skyblivion_spellcrafting/papyrus/: TES4spellmakingstationscript.psc  spellmaking.psc
skyblivion_spellcrafting/src/: Spellmaking.cpp  Spellmaking.h  SpellmakingMenu.cpp  SpellmakingMenu.h  main.cpp
skyblivion_spellcrafting/ui/: AvailableEffectsList.as  GlobalListener.as  SpellmakingMenu.as  SpellmakingMenu.fla
skyblivion_ui/ui/: cursormenu.fla  dialoguemenu.fla  hudmenu.fla  loadingmenu.fla  sleepwaitmenu.fla  startmenu.fla  tweenmenu.fla  version.as
skyblivion_ui/ui/Common/Shared/: Proxy.as
skyblivion_ui/ui/Common/skyui/util/: GlobalFunctions.as
skyblivion_ui/ui/FavoritesMenu/: favoritesmenu.fla
skyblivion_ui/ui/ItemMenus/: bottombar.fla  inventorylists.fla  itemcard.fla
skyblivion_ui/ui/MapMenu/: map.fla
skyblivion_ui/ui/MapMenu/Map/: MapMarker.as
skyblivion_ui/ui/PauseMenu/: Quest_Journal.as  SystemPage.as  quest_journal.fla
skyblivion_ui/ui/Resources/: buttonArt.fla  icons_category_psychosteve.fla  mapMarkerArt.fla
skyblivion_ui/ui/loadingmenu/: LoadingMenu.as
skyblivion_ui/ui/startmenu/: StartMenu.as
skyblivion_ui/ui/tweenmenu/: TweenMenu.as
skywind_birthsign/: CMakeLists.txt
skywind_birthsign/include/: BirthsignMenu.h
skywind_birthsign/papyrus/: fbmw_chargenbirthsignsscript.psc
skywind_birthsign/src/: BirthsignMenu.cpp  BirthsignMenu.h  PCH.h  main.cpp
skywind_birthsign/ui/: BirthsignButton.as  BirthsignData.json  BirthsignMenu.as  EffectsList.as  Skywind_ENGLISH.txt
skywind_birthsign/util/: generate_translation.py  json_to_string.py
skywind_chargenstuff/: CMakeLists.txt
skywind_chargenstuff/src/: NameMenu.cpp  NameMenu.h  main.cpp
skywind_chargenstuff/ui/: NameMenu.as  RaceSexPanels.as  namemenu.fla  racesex_menu.fla
skywind_classcreation/: CMakeLists.txt
skywind_classcreation/papyrus/: fbmw_chargenclassbasescript.psc  fbmw_chargenclasscustomscript.psc  fbmw_chargenclassgeneratescript.psc  fbmw_chargenclasspicklistscript.psc  fbmw_tif__01062cf6.psc  fbmw_tif__01062d24.psc  skywind.psc
skywind_classcreation/src/: ClassCreationMenu.cpp  ClassCreationMenu.h  main.cpp
skywind_classcreation/ui/: ClassCreation.fla  ClassCreationButton.as  ClassCreationMenu.as  ClassCreationTextInput.as  ClassMenuPresets.as  ClassQuiz.as  JSON.as  Skywind_ENGLISH.txt  class_data.json  classquiz.fla
skywind_classcreation/util/: generate_translation.py
skywind_classquiz/papyrus/: fbmw_chargenclassgeneratescript.psc
skywind_classquiz/ui/: ChoiceButton.as  ClassQuiz.as  classquiz.fla
skywind_classquiz/util/: raw_qa.txt
